--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -81,6 +81,10 @@
     margin-bottom: .25rem;
   }
 
+  summary {
+    cursor: pointer;
+  }
+
   @include media-breakpoint-up(lg) {
     > ul,
     > ol,
